--- a/model/forLearn.ipynb
+++ b/model/forLearn.ipynb
@@ -1363,7 +1363,8 @@
     "    pickle.dump(rfc, f)\n",
     "with open(os.path.join(save_dir,'minmaxscaler.pkl'), 'wb') as f:\n",
     "    pickle.dump(ms, f)\n",
-    "# Optionally save label encoder if you used one (leave as-is if not)\n",
+    "with open(os.path.join(save_dir,'label_encoder.pkl'), 'wb') as f:\n",
+    "    pickle.dump(ms, f)\n",
     "try:\n",
     "    import sklearn\n",
     "    if 'le' in globals():\n",
