--- a/model/forLearn.ipynb
+++ b/model/forLearn.ipynb
@@ -1364,7 +1364,7 @@
     "with open(os.path.join(save_dir,'minmaxscaler.pkl'), 'wb') as f:\n",
     "    pickle.dump(ms, f)\n",
     "with open(os.path.join(save_dir,'label_encoder.pkl'), 'wb') as f:\n",
-    "    pickle.dump(ms, f)\n",
+    "    pickle.dump(le, f)\n",
     "try:\n",
     "    import sklearn\n",
     "    if 'le' in globals():\n",
