--- a/model/forLearn.ipynb
+++ b/model/forLearn.ipynb
@@ -1371,7 +1371,7 @@
     "        with open(os.path.join(save_dir,'label_encoder.pkl'),'wb') as f: pickle.dump(le, f)\n",
     "except Exception:\n",
     "    pass\n",
-    "print(\"Saved model.pkl and minmaxscaler.pkl (retrained on full data) in 'model/' folder.\")"
+    "print(\"Saved model.pkl, minmaxscaler.pkl and label_encoder.pkl (retrained on full data) in 'model/' folder.\")"
    ]
   },
   {
