Fix crop and crop number mappings in forLearn.ipynb

--- a/forLearn.ipynb
+++ b/forLearn.ipynb
@@ -714,9 +714,9 @@
     }
    ],
    "source": [
-    "df_dict = {'rice':1, 'maize':2, 'chickpea':3, 'kidneybeans':4, 'pigeonpeas'5:, 'mothbeans':6,\n",
-    "           'mungbean':7, 'blackgram':8, 'lentil':9, 'pomegranate':10, 'banana':11, 'mango':12, 'grapes':13,\n",
-    "           'watermelon':14, 'muskmelon':15, 'apple':16, 'orange':17, 'papaya':18, 'coconut':19, 'cotton':20, 'jute':21, 'coffee':22\n",
+    "df_dict = {'rice':1, 'maize':2, 'chickpea':21, 'kidneybeans':20, 'pigeonpeas':19, 'mothbeans':18,\n",
+    "           'mungbean':17, 'blackgram':16, 'lentil':15, 'pomegranate':14, 'banana':13, 'mango':12, 'grapes':11,\n",
+    "           'watermelon':10, 'muskmelon':9, 'apple':8, 'orange':7, 'papaya':6, 'coconut':5, 'cotton':4, 'jute':3, 'coffee':22\n",
     "           }\n",
     "\n",
     "df['crop_num']= df['Crop'].map(df_dict)\n",
@@ -1450,7 +1450,7 @@
     "\n",
     "predict = recommendation(N,P,k,temperature,humidity,ph,rainfall)\n",
     "\n",
-    "crop_dict = {1: \"Rice\", 2: \"Maize\", 21: \"Jute\", 20: \"Cotton\", : \"Coconut\", 6: \"Papaya\", 7: \"Orange\",\n",
+    "crop_dict = {1: \"Rice\", 2: \"Maize\", 3: \"Jute\", 4: \"Cotton\", 5: \"Coconut\", 6: \"Papaya\", 7: \"Orange\",\n",
     "                 8: \"Apple\", 9: \"Muskmelon\", 10: \"Watermelon\", 11: \"Grapes\", 12: \"Mango\", 13: \"Banana\",\n",
     "                 14: \"Pomegranate\", 15: \"Lentil\", 16: \"Blackgram\", 17: \"Mungbean\", 18: \"Mothbeans\",\n",
     "                 19: \"Pigeonpeas\", 20: \"Kidneybeans\", 21: \"Chickpea\", 22: \"Coffee\"}\n",
