--- a/forLearn.ipynb
+++ b/forLearn.ipynb
@@ -21,7 +21,7 @@
     {
      "data": {
       "text/plain": [
-       "<Axes: xlabel='N', ylabel='K'>"
+       "<Axes: xlabel='P', ylabel='K'>"
       ]
      },
      "execution_count": 32,
