Change scatter plot axes from N to P

--- a/forLearn.ipynb
+++ b/forLearn.ipynb
@@ -21,7 +21,7 @@
     {
      "data": {
       "text/plain": [
-       "<Axes: xlabel='P', ylabel='K'>"
+       "<Axes: xlabel='N', ylabel='K'>"
       ]
      },
      "execution_count": 32,
@@ -41,7 +41,7 @@
    ],
    "source": [
     "df =pd.read_csv('data/Crop_recommendation.csv')\n",
-    "df.plot(kind='scatter', x='N', y='K')"
+    "df.plot(kind='scatter', x='P', y='K')"
    ]
   },
   {
