Update scatter plot to use N and K axes

--- a/forLearn.ipynb
+++ b/forLearn.ipynb
@@ -41,7 +41,7 @@
    ],
    "source": [
     "df =pd.read_csv('data/Crop_recommendation.csv')\n",
-    "df.plot(kind='scatter', x='P', y='K')"
+    "df.plot(kind='scatter', x='N', y='K')"
    ]
   },
   {
